# powerplatform-dataverse-service-client

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust_build.yml  rust_publish.yml
src/: action.rs  batch.rs  client.rs  entity.rs  error.rs  lib.rs  query.rs  reference.rs  result.rs  select.rs
src/auth/: client_secret.rs  mod.rs  no_auth.rs
src/entity/: mod.rs
src/query/: attribute.rs  filter.rs  mod.rs  order.rs
