[package]
name = "powerplatform-dataverse-service-client"
description = "unofficial rust client library for connecting to Microsoft Dataverse environments"
version = "0.2.0"
edition = "2021"
authors = ["Morten Römer"]
repository = "https://github.com/MortenRoemer/powerplatform-dataverse-service-client"
license = "MIT"
keywords = ["dataverse", "powerplatform", "dynamics"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
reqwest = "0.11.10"
tokio = { version = "1.18", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
async-trait = "0.1.53"

[dependencies.uuid]
version = "1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # adds serialization support
]
