[package]
name = "powerplatform-dataverse-service-client"
description = "unofficial rust client library for connecting to Microsoft Dataverse environments"
version = "0.2.3"
edition = "2021"
authors = ["Morten Römer"]
repository = "https://github.com/MortenRoemer/powerplatform-dataverse-service-client"
license = "MIT"
keywords = ["dataverse", "powerplatform", "dynamics"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["native-tls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/default-tls"]

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12"}
tokio = { version = "1.39", features = ["full"]}
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
async-trait = "0.1"

[dependencies.uuid]
version = "1.10"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # adds serialization support
]
